@@ -14,7 +14,6 @@ import uk.gov.hmcts.reform.prl.models.dto.ccd.CaseData;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.C100_CASE_TYPE;
@@ -54,7 +53,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
             Optional<List<Element<ChildrenLiveAtAddress>>> childrenAddress = ofNullable(homeOptional.get().getChildren());
             if (childrenAddress.isPresent()) {
                 List<ChildrenLiveAtAddress> childrenLiveAtAddressList = childrenAddress.get().stream().map(Element::getValue)
-                    .collect(Collectors.toList());
+                    .toList();
                 if (childrenLiveAtAddressList.stream().anyMatch(childAddress -> YesOrNo.Yes.equals(childAddress.getKeepChildrenInfoConfidential()))) {
                     return true;
                 }
@@ -72,7 +71,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
             List<Child> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             for (Child c : children) {
                 if (YesOrNo.Yes.equals(c.getIsChildAddressConfidential())) {
@@ -83,7 +82,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
                     List<OtherPersonWhoLivesWithChild> otherPersonList = otherPersonWrapped.get()
                         .stream()
                         .map(Element::getValue)
-                        .collect(Collectors.toList());
+                        .toList();
                     boolean isConfidentialDetailsAvaialble = otherPersonList.stream()
                         .anyMatch(eachPerson -> YesOrNo.Yes.equals(eachPerson.getIsPersonIdentityConfidential()));
                     if (isConfidentialDetailsAvaialble) {
@@ -112,7 +111,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
             List<PartyDetails> applicants = applicantsWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             for (PartyDetails applicant : applicants) {
                 if (YesOrNo.Yes.equals(applicant.getIsAddressConfidential())
@@ -140,7 +139,7 @@ public class ConfidentialDetailsGenerator implements FieldGenerator {
             List<PartyDetails> respondents = respondentsWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
 
             for (PartyDetails respondent : respondents) {
                 if (YesOrNo.Yes.equals(respondent.getIsAddressConfidential())
