@@ -15,7 +15,6 @@ import uk.gov.hmcts.reform.prl.services.TaskErrorService;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static java.util.Optional.ofNullable;
 import static uk.gov.hmcts.reform.prl.enums.Event.CHILDREN_AND_OTHER_PEOPLE_IN_THIS_APPLICATION;
@@ -46,7 +45,7 @@ public class ChildrenAndOtherPeopleInThisApplicationChecker implements EventChec
             List<ChildrenAndOtherPeopleRelation> children = childrenWrapped.get()
                 .stream()
                 .map(Element::getValue)
-                .collect(Collectors.toList());
+                .toList();
             for (ChildrenAndOtherPeopleRelation c : children) {
                 log.debug("ChildrenAndOtherPeopleInThisApplicationChecker - "
                               + "validateMandatoryFieldsCompleted :{} ",validateMandatoryFieldsCompleted(c));
